--- a/SampleServer/Web.config
+++ b/SampleServer/Web.config
@@ -49,7 +49,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name = "DatabaseContext" connectionString ="data source = ITSTHE1-THINK; Initial Catalog=SampleServerDb; integrated security = SSPI" providerName ="System.Data.SqlClient"/>
+    <add name = "DatabaseContext" connectionString ="Data Source=tcp:nilshantestmobileapp.database.windows.net,1433;Initial Catalog=SampleServerDb;User ID=nilshan;Password=Mindfreaker1" providerName ="System.Data.SqlClient"/>
+    <!-- localConnectionString = connectionString ="data source = ITSTHE1-THINK; Initial Catalog=SampleServerDb; integrated security = SSPI" -->
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
